# v8

./: .gclient_entries  .gclient_previous_sync_commits  .gitattributes  README.md
.cipd/: tagcache.db
.cipd/pkgs/0/: _current
.cipd/pkgs/2/: _current
.cipd/pkgs/3/: _current
.cipd/pkgs/4/: _current
depot_tools/: python3_bin_reldir.txt  python_bin_reldir.txt  update_depot_tools
depot_tools/.cipd_bin/: LICENSE  diagnose_goma_log.py  goma_auth  goma_auth.py  goma_ctl.py  sha256.json
depot_tools/.cipd_bin/.versions/: bb.cipd_version  dirmd.cipd_version  pinpoint.cipd_version  rdb.cipd_version  vpython.cipd_version
depot_tools/.cipd_bin/2.7/.versions/: cpython.cipd_version
depot_tools/.cipd_bin/3.8/.versions/: cpython3.cipd_version
depot_tools/.cipd_client_cache/: tagcache.db
depot_tools/.versions/: .cipd_client.cipd_version
depot_tools/bootstrap-2@3.8.10.chromium.26_bin/.cipd/: tagcache.db
depot_tools/bootstrap-2@3.8.10.chromium.26_bin/python3/.versions/: cpython3.cipd_version
hmsdk/: environment-setup-aarch64-euler-elf  environment-setup-armv7a-euler-eabi  flatten_sdk.py  sdk-fileslist  sdk-fileslist-m536agrp  sdk-fileslist-m536agrp-m536a  site-config-armv7a-euler-eabi  version-aarch64-euler-elf
hmsdk/sysroots/: aarch64-euler-elf
hmsdk/sysroots/aarch64-euler-elf_all_in_one/etc/: mount.sh
hmsdk/sysroots/aarch64-euler-elf_all_in_one/lib/: libunwind_s.so.1
hmsdk/sysroots/aarch64-euler-elf_all_in_one/sbin/: route  telnetd
hmsdk/sysroots/x86_64-eulersdk-linux/: fixmepath.abi-compliance-checker-native  fixmepath.cmd.abi-compliance-checker-native  fixmepath.cmd.gcc-cross-aarch64  fixmepath.gcc-cross-aarch64
hmsdk/sysroots/x86_64-eulersdk-linux/etc/: ld.so.conf
hmsdk/sysroots/x86_64-eulersdk-linux/sysroot-providers/: abi-compliance-checker-native  abi-dumper-native  binutils-cross-aarch64  hm-cmake-modules-native  hm-cmakeng-modules-native  hm-cmakeng-toolchain-cross-aarch64  hm-dsl-native  hm-filesystems-tools-native  (+11 more)
new_v8/v8_2/: .gclient_previous_sync_commits
v8/: aarch64-euler-elf-ar
v8/tools/toolchain/: BUILD.gnq
v8_2/: .gclient_entries
v8_2/.cipd/: tagcache.db
v8_2/v8/tools/toolchain/: BUILD.gn
(+2312 files in other folders)
